--- a/login_in/game/Gomoku/index.html
+++ b/login_in/game/Gomoku/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>五子棋游戏</title>
+    <title>Momo五子棋</title>
     <link rel="stylesheet" href="style.css">
         <link rel="icon" href="../../images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <h1>五子棋游戏</h1>
+        <h1>Momo五子棋</h1>
         
         <!-- 游戏模式选择 -->
         <div class="mode-selection">
@@ -58,6 +58,7 @@
             <div class="game-controls">
                 <button id="undoBtn" class="control-btn">悔棋</button>
                 <button id="restartBtn" class="control-btn">重新开始</button>
+                <button id="bgmBtn" class="control-btn">音乐: 关</button>
                 <button id="backToMenu" class="control-btn">返回菜单</button>
             </div>
         </div>
