--- a/login_in/pop_up_generator/index.html
+++ b/login_in/pop_up_generator/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>温暖弹窗生成器</title>
+    <title>弹窗生成器</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../images/favicon.jpg" type="image/x-icon">
 
