--- a/login_in/link/test.html
+++ b/login_in/link/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../images/favicon.jpg">
-    <title>页面建设中</title>
+    <title>等我</title>
     <style>
         body {
             font-family: 'Microsoft YaHei', sans-serif;
