--- a/index.html
+++ b/index.html
@@ -293,13 +293,12 @@
 
           <div class="s__medias js-medias">
             <div class="s__video s__video--1 js-media" data-lg-parallax="child">
-              <video preload="none" src="https://730-3.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=cPOdYY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcbmvtgMwIkFsc95Jcfj3cWOH4ZlkSlF0XfawkwIihT14wmecWhoCNLfcWBWsr&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4Zhy4RYeSqD2OfFdSqF2sY&nid=730" loop="" muted="" playsinline=""></video>
+              <video preload="none" src="https://video3.vod.tv.itc.cn/NhZTqHEIsUcRWcARqge8pcl6ivgEW3fVQhLyGGU2nn77RYtUf3PjTL2TiV7AgKb7Ow.mp4?sig=sZ19zzHtaxY9nb-f-PoFw3heEqhIpbLgeHwxQg..&nid=2803" loop="" muted="" playsinline=""></video>
             </div>
 
             <div class="s__video s__video--2 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.4">
               <video preload="none"
-                src="
-https://data.vod.itc.cn/?k=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotXcgM1uyt8B0mEGNDoBuTWcgMAdypES0MocWJytvm6AZM47TVWAySNCNt8SotNcgmeUqFoV0Y2svmfdRDWS0mbcyM0GvmXAyB2HWhvs5Bv4WYcdbLkeb6ACb46vzTcOfOA2Z8bGyT6L5m47fw&a=sU1IgMAS0mEAZDNXWBNXfYysZYo2RD6S0p0cWhoCoMNGRD1Sqt8ISCGtE3bOLxmH3bCEW3LxmFyS5ja9kJlq35PjkkCtasUjp&ssl=1"
+                src="https://data.vod.itc.cn/?k=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotXcgM1uyt8B0mEGNDoBuTWcgMAdypES0MocWJytvm6AZM47TVWAySNCNt8SotNcgmeUqFoV0Y2svmfdRDWS0mbcyM0GvmXAyB2HWhvs5Bv4WYcdbLkeb6ACb46vzTcOfOA2Z8bGyT6L5m47fw&a=sU1IgMAS0mEAZDNXWBNXfYysZYo2RD6S0p0cWhoCoMNGRD1Sqt8ISCGtE3bOLxmH3bCEW3LxmFyS5ja9kJlq35PjkkCtasUjp&ssl=1"
                 loop="" muted="" playsinline=""></video>
             </div>
 
@@ -311,8 +310,8 @@ https://data.vod.itc.cn/?k=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotXcgM1uyt8B0mEGNDoBu
 
             <div class="s__video s__video--4 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.6">
               <video preload="none"
-                src="https://video3.vod.tv.itc.cn/NhZTqHEIsUcRWcARqge8pcl6ivgEW3fVQhLyGGU2nn77RYtUf3PjTL2TiV7AgKb7Ow.mp4?sig=sZ19zzHtaxY9nb-f-PoFw3heEqhIpbLgeHwxQg..&nid=2803"
-                loop="" muted="" playsinline=""></video>
+                src=""
+                loop="" muted="https://730-3.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=cPOdYY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcbmvtgMwIkFsc95Jcfj3cWOH4ZlkSlF0XfawkwIihT14wmecWhoCNLfcWBWsr&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4Zhy4RYeSqD2OfFdSqF2sY&nid=730" playsinline=""></video>
             </div>
             <!-- .s__video -->
           </div>
