--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
             <div class="s__video s__video--4 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.6">
               <video preload="none"
-                src=""
-                loop="" muted="https://730-3.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=cPOdYY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcbmvtgMwIkFsc95Jcfj3cWOH4ZlkSlF0XfawkwIihT14wmecWhoCNLfcWBWsr&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4Zhy4RYeSqD2OfFdSqF2sY&nid=730" playsinline=""></video>
+                src="https://730-3.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=cPOdYY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcbmvtgMwIkFsc95Jcfj3cWOH4ZlkSlF0XfawkwIihT14wmecWhoCNLfcWBWsr&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4Zhy4RYeSqD2OfFdSqF2sY&nid=730"
+                loop="" muted="" playsinline=""></video>
             </div>
             <!-- .s__video -->
           </div>
