--- a/login_in/index.html
+++ b/login_in/index.html
@@ -641,6 +641,26 @@
 
 
                 <div class="blogs">
+                    <a href="../login_in/game/Caring Tutorials/index.html" target="_blank">
+                        <div class="img">
+                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
+                            <div class="blog-date">娱乐</div>
+                        </div>
+                        <div class="blog-text">
+                            <h3>代码里的温暖心意</h3>
+                            <p>
+                                <strong style="color: #28bb68; font-size: 23px;">用代码绘制跳动爱心</strong>
+                                <br>
+                                不会写代码，不会画爱心
+                                <br>今天就让我手把手教你写代码吧
+
+                            </p>
+                        </div>
+                    </a>
+                </div>
+
+
+                 <div class="blogs">
                     <a href="./link/test.html" target="_blank">
                         <div class="img">
                             <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
@@ -657,6 +677,47 @@
                         </div>
                     </a>
                 </div>
+
+
+                 <div class="blogs">
+                    <a href="./link/test.html" target="_blank">
+                        <div class="img">
+                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
+                            <div class="blog-date">专属位</div>
+                        </div>
+                        <div class="blog-text">
+                            <h3>只为特殊的人</h3>
+                            <p>
+                                <strong style="color: #28bb68; font-size: 23px;">(*≧︶≦)、(￣▽￣* )ゞ</strong>
+                                <br>
+                                世界那么大，偏偏是你穿过人海停在我面前，像一本翻到最合适章节的书，像迷路时偶然撞见的灯塔。
+
+                            </p>
+                        </div>
+                    </a>
+                </div>
+
+
+
+                 <div class="blogs">
+                    <a href="./link/test.html" target="_blank">
+                        <div class="img">
+                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
+                            <div class="blog-date">专属位</div>
+                        </div>
+                        <div class="blog-text">
+                            <h3>只为特殊的人</h3>
+                            <p>
+                                <strong style="color: #28bb68; font-size: 23px;">(*≧︶≦)、(￣▽￣* )ゞ</strong>
+                                <br>
+                                世界那么大，偏偏是你穿过人海停在我面前，像一本翻到最合适章节的书，像迷路时偶然撞见的灯塔。
+
+                            </p>
+                        </div>
+                    </a>
+                </div>
+
+
 
 
 
