--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
             <div class="s__video s__video--4 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.6">
               <video preload="none"
-                src="https://data.vod.itc.cn/?k=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotXcgM1uyt8B0mEGNDoBuTWcgMAdypES0MocWJytvm6AZM47TVWAySNCNt8SotNcgmeUqFoV0Y2svmfdRDWS0mbcyM0GvmXAyB2HWhb4lByO5BvNyewG82yIlhvE3YPOZOkopjs4HawTW3dqr&a=sU1IgMAS0mEAZDNXWBNXRYAOWFo2RD6S0p0cWhoCoMNGRD1Sqt8IS3wOaJb9pJD0kD64lJh9vJYcla9sChDqfBp4Ssg4HOCjr&ssl=1"
+                src="https://720-7.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=X8b7YY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAceJvIwDaoWIs0TogPFebhDyV0EoWT8CbM8yBgFyMPJ6XvmecWhoCNLfcWBvsr&q=OpCUhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4ZhdsWYySqD2OfhWSqF2sY&nid=720"
                 loop="" muted="" playsinline=""></video>
             </div>
             <!-- .s__video -->
