--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
             <div class="s__video s__video--2 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.4">
               <video preload="none"
-                src="https://data.vod.itc.cn/?k=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotXcgM1uyt8B0mEGNDoBuTWcgMAdypES0MocWJytvm6AZM47TVWAySNCNt8SotNcgmeUqFoV0Y2svmfdRDWS0mbcyM0GvmXAyB2HWhvs5Bv4WYcdbLkeb6ACb46vzTcOfOA2Z8bGyT6L5m47fw&a=sU1IgMAS0mEAZDNXWBNXfYysZYo2RD6S0p0cWhoCoMNGRD1Sqt8ISCGsivUOfoUElIMhTfOMYW30tkGb6WvMpkto8AeWTwXD5&ssl=1"
+                src="https://video5.vod.tv.itc.cn/N9icBOu3iD98toIMub3s7DwufjGMilM8anJZoP6e91VTrvrvHoDfUTAR0o64mhxSGp.mp4?sig=bomAa0MWybixfzg8HsWgAJ5tk6EKVCjEldGGlg..&nid=2821"
                 loop="" muted="" playsinline=""></video>
             </div>
 
@@ -310,7 +310,7 @@
 
             <div class="s__video s__video--4 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.6">
               <video preload="none"
-                src="https://720-7.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=X8b7YY&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAceJvIwDaoWIs0TogPFebhDyV0EoWT8CbM8yBgFyMPJ6XvmecWhoCNLfcWBvsr&q=OpCUhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4ZhdsWYySqD2OfhWSqF2sY&nid=720"
+                src="https://722-8.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=EreC5p&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcDLEOMEX6gE69eKWAo2CughyRDKNURpxtbLv2yM0DMY6S0D2svmEAoO2tWJE&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4ZhdtfGNSqD2OfJeSqF2sY&nid=722"
                 loop="" muted="" playsinline=""></video>
             </div>
             <!-- .s__video -->
