--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
             <div class="s__video s__video--4 js-media" data-lg-parallax="" data-lg-parallax-amplitude="0.6">
               <video preload="none"
-                src="https://722-8.vod.tv.itc.cn/sohu/v2/k8AyN8FjZLHlrVn6dM8Y7U4nl1ouWQTavzM5mYi8IHO0XIgJbamty4ClYfFEXNpzigB80z.mp4?k=EreC5p&p=XZhuOp33OUoWXZoIyM0Gvm12ZMX2gLsSotxcgMAS0mEAZDNXWBNXRYAOWFo2NG2OfByS0TPcgM1uyt8B0mEGNDoGyG2i0MsUwm1mRD6S0m1cWhoCoMNGRD1SotKcWOoV0F22NVp&r=TmI20LscWOo3NMAcDLEOMEX6gE69eKWAo2CughyRDKNURpxtbLv2yM0DMY6S0D2svmEAoO2tWJE&q=OpCBhW7IRYodRDbOvmfCyY2sRYWHfJvX5GeslGAOvmbcWJA4ZhdtfGNSqD2OfJeSqF2sY&nid=722"
+                src="https://video5.vod.tv.itc.cn/Nog5lt0JZlDoqb0jyVN1fuPMetZv3VixD7p3icUeUB14se8C63MaGPlyiwrh.mp4?sig=ozHsBalWZGQqDsmwdFB_H82zM2WOMeOBHokQeg..&nid=2821"
                 loop="" muted="" playsinline=""></video>
             </div>
             <!-- .s__video -->
@@ -1412,8 +1412,8 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              别睡着了
-              <br>这不是尽头
+              成为自由的人
+              <br>我已有答案
             </div>
             <!-- .s__intro__text -->
           </div>
