--- a/login_in/index.html
+++ b/login_in/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <!--包含所有div的容器-->
-    <div id="all">
+        <div id="all">
         <!--鼠标跟随效果-->
         <div class="cursor"></div>
         <!--鼠标跟随效果-->
@@ -606,7 +606,7 @@
                 <div class="blogs">
                     <a href="./game/Gomoku/index.html" target="_blank">
                         <div class="img">
-                            <img src="./game/Gomoku/image/点击图.png" alt="blog-six">
+                            <img src="https://q2.itc.cn/q_70/images01/20260201/60d93dec27c64df78b0df4b60cdf315d.png" alt="blog-six">
                             <div class="blog-date">娱乐</div>
                         </div>
                         <div class="blog-text">
@@ -624,7 +624,7 @@
                 <div class="blogs">
                     <a href="./pop_up_generator/index.html" target="_blank">
                         <div class="img">
-                            <img src="./pop_up_generator/image/点击.png" alt="blog-six">
+                            <img src="https://q1.itc.cn/q_70/images01/20260201/4bda73f8be7349848f6a7e4a6237b3fa.png" alt="blog-six">
                             <div class="blog-date">娱乐</div>
                         </div>
                         <div class="blog-text">
@@ -643,8 +643,8 @@
                 <div class="blogs">
                     <a href="../login_in/game/Caring Tutorials/index.html" target="_blank">
                         <div class="img">
-                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
-                            <div class="blog-date">娱乐</div>
+                            <img src="https://q0.itc.cn/q_70/images01/20260201/be13940f395545229bd15cbec6a48476.png" alt="blog-six">
+                            <div class="blog-date">浪漫</div>
                         </div>
                         <div class="blog-text">
                             <h3>代码里的温暖心意</h3>
@@ -661,17 +661,17 @@
 
 
                  <div class="blogs">
-                    <a href="./link/test.html" target="_blank">
+                    <a href="./game/Browse Baidu/index.html" target="_blank">
                         <div class="img">
-                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
-                            <div class="blog-date">专属位</div>
+                            <img src="https://q7.itc.cn/q_70/images01/20260201/9e390c8554e143b89f4431162544b2e6.png" alt="blog-six">
+                            <div class="blog-date">浪漫</div>
                         </div>
                         <div class="blog-text">
-                            <h3>只为特殊的人</h3>
+                            <h3>逛逛百度</h3>
                             <p>
-                                <strong style="color: #28bb68; font-size: 23px;">(*≧︶≦)、(￣▽￣* )ゞ</strong>
+                                <strong style="color: #28bb68; font-size: 23px;">众里寻她千百度，那人却在灯火阑珊处</strong>
                                 <br>
-                                世界那么大，偏偏是你穿过人海停在我面前，像一本翻到最合适章节的书，像迷路时偶然撞见的灯塔。
+                                基于百度首页改造的浪漫爱心纪念册项目，专为情侣打造，记录美好时光与情感瞬间  
 
                             </p>
                         </div>
