--- a/login_in/game/Gomoku/index.html
+++ b/login_in/game/Gomoku/index.html
@@ -1,79 +1,428 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momo五子棋</title>
-    <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="../../images/favicon.jpg" type="image/x-icon">
-</head>
-<body>
-    <div class="container">
-        <h1>Momo五子棋</h1>
-        
-        <!-- 游戏模式选择 -->
-        <div class="mode-selection">
-            <h2>选择游戏模式</h2>
-            <div class="mode-buttons">
-                <button id="singlePlayer" class="mode-btn">单人模式</button>
-                <button id="twoPlayer" class="mode-btn">双人模式</button>
-            </div>
-        </div>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        <!-- 难度选择（仅单人模式显示） -->
-        <div id="difficultySelection" class="difficulty-selection hidden">
-            <h2>选择难度</h2>
-            <div class="difficulty-buttons">
-                <button id="easy" class="difficulty-btn">简单</button>
-                <button id="medium" class="difficulty-btn">中等</button>
-                <button id="hard" class="difficulty-btn">困难</button>
-            </div>
-        </div>
+body {
+    font-family: 'Microsoft YaHei', Arial, sans-serif;
+    background: #0b1020 url("https://q2.itc.cn/q_70/images01/20260201/c59162f13a0f4675bd1f73c01ffedd15.jpeg") center / cover no-repeat fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-height: 100svh;
+    padding: 24px;
+    color: #1d2433;
+}
 
-        <!-- 游戏界面 -->
-        <div id="gameInterface" class="game-interface hidden">
-            <div class="game-info">
-                <div class="current-player">
-                    当前玩家: <span id="currentPlayer">黑棋</span>
-                </div>
-                <div class="game-mode">
-                    模式: <span id="gameModeDisplay">双人</span>
-                </div>
-                <div class="difficulty-display">
-                    难度: <span id="difficultyDisplay">-</span>
-                </div>
-                <div class="timer">
-                    时间: <span id="timerDisplay">00:00</span>
-                </div>
-                <div class="move-count">
-                    步数: <span id="moveCount">0</span>
-                </div>
-            </div>
+body::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: radial-gradient(1200px 600px at 20% 0%, rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0) 60%),
+        linear-gradient(180deg, rgba(8, 10, 22, 0.42), rgba(8, 10, 22, 0.18));
+    pointer-events: none;
+}
 
-            <!-- 棋盘 -->
-            <div class="board-container">
-                <canvas id="board" width="600" height="600"></canvas>
-            </div>
+.container {
+    background-color: rgba(255, 255, 255, 0.85);
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    position: relative;
+    z-index: 1;
+}
 
-            <div class="game-controls">
-                <button id="undoBtn" class="control-btn">悔棋</button>
-                <button id="restartBtn" class="control-btn">重新开始</button>
-                <button id="bgmBtn" class="control-btn">音乐: 关</button>
-                <button id="backToMenu" class="control-btn">返回菜单</button>
-            </div>
-        </div>
+.welcome-section {
+    text-align: center;
+    margin-bottom: 40px;
+}
 
-        <!-- 游戏结果弹窗 -->
-        <div id="gameResult" class="game-result hidden">
-            <div class="result-content">
-                <h2 id="resultTitle">游戏结束</h2>
-                <p id="resultMessage"></p>
-                <button id="playAgain" class="control-btn">再玩一次</button>
-                <button id="backToMenuFromResult" class="control-btn">返回菜单</button>
-            </div>
-        </div>
-    </div>
+.welcome-section h1 {
+    color: #5050ff;
+    font-size: 36px;
+    margin-bottom: 20px;
+    letter-spacing: 0.5px;
+}
 
-    <script src="script.js"></script>
-</body>
-</html>
+.welcome-section p {
+    font-size: 20px;
+    color: #666;
+    margin-bottom: 30px;
+}
+
+#startButton {
+    background-color: #5050ff;
+    color: white;
+    border: none;
+    padding: 15px 40px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#startButton:focus-visible,
+#addButton:focus-visible,
+#customInput:focus-visible {
+    outline: 3px solid rgba(80, 80, 255, 0.35);
+    outline-offset: 2px;
+}
+
+#startButton:hover {
+    background-color: #4040dd;
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(80, 80, 255, 0.3);
+}
+
+.custom-section {
+    margin-top: 30px;
+}
+
+.custom-section h2 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.hint {
+    color: #999;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.input-container {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+#customInput {
+    flex: 1;
+    padding: 12px 15px;
+    font-size: 16px;
+    border: 2px solid #ddd;
+    border-radius: 8px 0 0 8px;
+    outline: none;
+    transition: border-color 0.3s ease;
+    min-width: 0;
+}
+
+#customInput:focus {
+    border-color: #5050ff;
+}
+
+#addButton {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    border-radius: 0 8px 8px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#addButton:hover {
+    background-color: #45a049;
+}
+
+#addButton:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+}
+
+.custom-list {
+    max-height: 300px;
+    overflow-y: auto;
+    border: 1px solid #eee;
+    border-radius: 8px;
+    padding: 10px;
+    scrollbar-gutter: stable;
+}
+
+.custom-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    margin-bottom: 8px;
+    background-color: rgba(249, 249, 249, 0.8);
+    border-radius: 6px;
+    animation: fadeIn 0.3s ease;
+}
+
+.custom-item:last-child {
+    margin-bottom: 0;
+}
+
+.custom-text {
+    color: #333;
+    font-size: 16px;
+}
+
+.remove-btn {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.remove-btn:hover {
+    background-color: #ff3333;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* 弹窗样式 */
+.popup {
+    position: fixed;
+    border-radius: 35px;
+    padding: 20px 25px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: clamp(16px, 2.2vw, 22px);
+    color: white;
+    z-index: 1000;
+    animation: popupAppear 0.5s ease;
+    pointer-events: none;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+    opacity: 0.9;
+    text-align: center;
+    line-height: 1.25;
+    word-break: break-word;
+    max-width: min(72vw, 360px);
+    width: fit-content;
+    min-width: 140px;
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+}
+
+.surprise-overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 2000;
+    display: grid;
+    place-items: center;
+    padding: 18px;
+    background: rgba(8, 10, 22, 0.45);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+}
+
+.surprise-card {
+    width: min(520px, 92vw);
+    border-radius: 22px;
+    padding: 22px 20px;
+    background: rgba(255, 255, 255, 0.92);
+    box-shadow: 0 18px 60px rgba(0, 0, 0, 0.35);
+    display: grid;
+    justify-items: center;
+    gap: 14px;
+    animation: surpriseIn 0.35s ease;
+}
+
+.surprise-img {
+    width: 88px;
+    height: 88px;
+    object-fit: contain;
+    filter: drop-shadow(0 10px 18px rgba(0, 0, 0, 0.25));
+}
+
+.surprise-title {
+    font-size: 20px;
+    font-weight: 800;
+    color: #1d2433;
+    text-align: center;
+}
+
+.surprise-text {
+    font-size: 15px;
+    color: #465064;
+    text-align: center;
+    line-height: 1.55;
+}
+
+.surprise-actions {
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.surprise-btn {
+    border: none;
+    border-radius: 999px;
+    padding: 10px 16px;
+    font-weight: 800;
+    cursor: pointer;
+    box-shadow: 0 10px 22px rgba(0, 0, 0, 0.18);
+    transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.surprise-btn.primary {
+    background: linear-gradient(135deg, #5050ff 0%, #7b5cff 100%);
+    color: white;
+}
+
+.surprise-btn.ghost {
+    background: rgba(29, 36, 51, 0.08);
+    color: #1d2433;
+}
+
+.surprise-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 14px 26px rgba(0, 0, 0, 0.22);
+}
+
+.surprise-btn:active {
+    transform: translateY(0);
+    filter: brightness(0.98);
+}
+
+.surprise-btn:focus-visible {
+    outline: 3px solid rgba(255, 255, 255, 0.45);
+    outline-offset: 2px;
+}
+
+@keyframes surpriseIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px) scale(0.98);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
+
+.fixed-btn {
+    position: fixed;
+    z-index: 1001;
+    border: none;
+    padding: 11px 16px;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 999px;
+    cursor: pointer;
+    box-shadow: 0 8px 22px rgba(0, 0, 0, 0.22);
+    transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.fixed-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 12px 26px rgba(0, 0, 0, 0.28);
+}
+
+.fixed-btn:active {
+    transform: translateY(0);
+    filter: brightness(0.98);
+}
+
+.fixed-btn:focus-visible {
+    outline: 3px solid rgba(255, 255, 255, 0.45);
+    outline-offset: 2px;
+}
+
+.music-btn {
+    top: calc(16px + env(safe-area-inset-top));
+    left: calc(16px + env(safe-area-inset-left));
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    color: white;
+}
+
+.music-btn.is-playing {
+    background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+}
+
+.close-btn {
+    top: calc(16px + env(safe-area-inset-top));
+    right: calc(16px + env(safe-area-inset-right));
+    background: linear-gradient(135deg, #ff4d4d 0%, #ff2d55 100%);
+    color: white;
+}
+
+@media (max-width: 560px) {
+    body {
+        padding: 14px;
+    }
+
+    .container {
+        padding: 20px;
+        border-radius: 18px;
+    }
+
+    .welcome-section h1 {
+        font-size: 28px;
+    }
+
+    .welcome-section p {
+        font-size: 16px;
+    }
+
+    #startButton {
+        width: 100%;
+        padding: 13px 18px;
+        font-size: 16px;
+    }
+
+    .input-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #customInput {
+        border-radius: 10px;
+    }
+
+    #addButton {
+        border-radius: 10px;
+    }
+
+    .fixed-btn {
+        padding: 10px 14px;
+        font-size: 13px;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        transition: none !important;
+        animation: none !important;
+        scroll-behavior: auto !important;
+    }
+}
+
+@keyframes popupAppear {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
