--- a/login_in/index.html
+++ b/login_in/index.html
@@ -680,17 +680,17 @@
 
 
                  <div class="blogs">
-                    <a href="./link/test.html" target="_blank">
+                    <a href="./game/funny/index.html" target="_blank">
                         <div class="img">
-                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
-                            <div class="blog-date">专属位</div>
+                            <img src="./game/funny/images/image.png" alt="blog-six">
+                            <div class="blog-date">娱乐</div>
                         </div>
                         <div class="blog-text">
-                            <h3>只为特殊的人</h3>
+                            <h3>搞笑漫画</h3>
                             <p>
-                                <strong style="color: #28bb68; font-size: 23px;">(*≧︶≦)、(￣▽￣* )ゞ</strong>
+                                <strong style="color: #28bb68; font-size: 23px;">一觉醒来，我竟有些缓不过来了</strong>
                                 <br>
-                                世界那么大，偏偏是你穿过人海停在我面前，像一本翻到最合适章节的书，像迷路时偶然撞见的灯塔。
+                                咋了么，朋友，我这个漫画你不笑？
 
                             </p>
                         </div>
