--- a/login_in/index.html
+++ b/login_in/index.html
@@ -923,6 +923,8 @@
 
 
          const musicFiles = [
+            '云烟成雨.mp3',
+            '知我.mp3',
             '茫.mp3',
             '西楼别序正篇.mp3',
             '如果当时.mp3',
