--- a/index.html
+++ b/index.html
@@ -1419,8 +1419,9 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              成为自由的人
-              <br>我已有答案
+              有风的地方
+              <br>你依然在
+              <br>对吗
             </div>
             <!-- .s__intro__text -->
           </div>
@@ -2967,4 +2968,3 @@
 </body>
 
 </html>
-
