--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in/link/music/起风了.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in/link/music/说谎.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -1419,9 +1419,16 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              有风的地方
-              <br>你依然在
-              <br>对吗
+              有什么抵得过
+              <br>心甘情愿
+              <br>又有什么蠢得过
+              <br>自欺欺人
+              <br>或许不抱任何期待
+              <br>对我来说每天都是惊喜
+              <br>网站最后更新时间：
+              <br>2026年2月4日
+              <br>如果有缘
+              <br>九月在此不见不散
             </div>
             <!-- .s__intro__text -->
           </div>
