--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
               <br>自欺欺人
               <br>或许不抱任何期待
               <br>对我来说每天都是惊喜
-              <br>网站最后更新时间：
+              <br>网站最后更新时间
               <br>2026年2月4日
               <br>如果有缘
               <br>九月在此不见不散
