--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,8 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    因为剩下的冷笑话,需要我亲自去跟ta说。
+                    因为已经结束了呀
+                    <!-- 因为剩下的冷笑话,需要我亲自去跟ta说。 -->
                   </span>
                 </span>
               </dd>
