--- a/login_in/link/self_introduction.html
+++ b/login_in/link/self_introduction.html
@@ -133,7 +133,7 @@
             <i class="fas fa-play-circle"></i>
             星辰璀璨 银河浩瀚
           </h2>
-          <p class="section-subtitle">探索技术的无限可能</p>
+          <p class="section-subtitle">探索自我的无限可能</p>
         </div>
 
         <div class="video-container">
