--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in/link/music/说谎.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in/link/music/盲选.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -1427,7 +1427,7 @@
               <br>或许不抱任何期待
               <br>对我来说每天都是惊喜
               <br>网站最后更新时间
-              <br>2026年2月4日
+              <br>2026年2月5日
               <br>如果有缘
               <br>九月在此不见不散
             </div>
