--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in/link/music/盲选.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in/link/music/说谎.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
