--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in/link/music/再一次爱你.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in/link/music/counterattack.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -1420,14 +1420,10 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              有什么抵得过
-              <br>心甘情愿
-              <br>又有什么蠢得过
-              <br>自欺欺人
-              <br>或许不抱任何期待
-              <br>对我来说每天都是惊喜
+              绝望的消解过后
+              <br>必是重生
               <br>网站最后更新时间
-              <br>2026年2月5日
+              <br>2026年2月4日
               <br>如果有缘
               <br>九月在此不见不散
             </div>
@@ -2976,4 +2972,3 @@
 </body>
 
 </html>
-
