--- a/login_in/index.html
+++ b/login_in/index.html
@@ -90,7 +90,7 @@
                     <div class="secondline"
                         style="height: 30px; display: flex; align-items: center; justify-content: center;">
                         <span class="txt-rotate color" data-period="1200" style="color: rgb(225, 74, 157);"
-                            data-rotate='["前世五百次的回眸，终于换得这次相遇❤️❤️❤️","愿自己有直面未知的勇气，像无畏的行者，在生活的旷野里踏出属于自己的路","追赶日出算我献给的浪漫","荒唐的梦总是要有的，万一实现了呢","我们都在阴沟里，但仍有人仰望星空","我想成为别人的阳光，无需凭借谁的光","是赶路的人，也是努力生活的人","没人能看出我是在演，因为我演得真的很像我","昨天是历史，明天是谜团，今天是礼物。（所以英文里“现在”叫Present）","成长就是与不完美的自己和解","我不要用别人的尺子，来丈量自己的人生","小时候觉得大人说话不算数，长大之后，哈哈，我也经常对自己食言","我们总在纠结‘该选哪条路’，却忘了每条路都会让你遇见不同的风景","保持热情，奔赴下一场山海","把挫折当基石，将迷茫化星光，在逐梦途中，留存热爱与纯粹","如果注定要走夜路，那就带上星光","风会告诉你，什么叫做顺其自然","有时候，慢一点也没关系，花也要时间开放","生活没给糖，那就自己做点甜","做自己喜欢的事，哪怕慢一点也值得","人生无常，早点睡觉"]'></span>
+                            data-rotate='["前世五百次的回眸，终于换得这次相遇❤️❤️❤️","愿自己有直面未知的勇气，像无畏的行者，在生活的旷野里踏出属于自己的路","追赶日出算我献给的浪漫","荒唐的梦总是要有的，万一实现了呢","我们都在阴沟里，但仍有人仰望星空","我想成为别人的阳光，无需凭借谁的光","是赶路的人，也是努力生活的人","没人能看出我是在演，因为我演得真的很像我","只有经历了绝望，才会懂得不甘","成长就是与不完美的自己和解","我不要用别人的尺子，来丈量自己的人生","小时候觉得大人说话不算数，长大之后，哈哈，我也经常对自己食言","我们总在纠结‘该选哪条路’，却忘了每条路都会让你遇见不同的风景","保持热情，奔赴下一场山海","把挫折当基石，将迷茫化星光，在逐梦途中，留存热爱与纯粹","如果注定要走夜路，那就带上星光","风会告诉你，什么叫做顺其自然","有时候，慢一点也没关系，花也要时间开放","生活没给糖，那就自己做点甜","做自己喜欢的事，哪怕慢一点也值得","人生无常，早点睡觉"]'></span>
 
                         <!-- 
                             "前世999次的回眸，终于换得这次相遇❤️❤️❤️","每一次点击都是一份缘分🩷💕💓💗💞","春风若有怜花意，可否许我再少年","不要因为走得太远，而忘记为什么出发","相遇的意义，在于彼此照亮彼此","你的时间有限，不要为别人而活","我们都在阴沟里，但仍有人仰望星空","我说怎么不见了，原来是起风了啊","改变能改变的，接受不能改变的，并用智慧区分二者","人性的卑劣之处就在于，明明自己揣着私心，却总苛求着别人大度","自我提升的本质，就是对自己PUA的同时又给自己画饼","趋势瞬息万变，你的初衷也可能会随之动摇","世界以痛吻我，我要报之以歌","科技让生活更便捷，但也让我们更容易焦虑——比如已读不回","欲买桂花同载酒，终不似少年游","情绪到了喉咙，我却选择咽下去","有人说我总是笑，其实我早就笑累了","不是所有的坚持都有结果，但总有一些值得一试","生活嘛，除了热爱和自由，还有没完没了的验证码","如果你觉得自己一整天累得跟狗一样，你真是误会大了，狗都没你这么累","本想咸鱼翻身，结果一不小心，把自己腌成了咸鱼干","发个“哈哈哈”不代表真的笑了，可能只是懒得回","没人能看出我是在演，因为我演得真的很像我","人生最大的遗憾，不是做错了什么，而是没去做什么","愿我成为别人的阳光，无需凭借谁的光","仇恨是自己喝下毒药，却希望别人痛苦","真正的智慧在于知道自己一无所知","真理并不总是复杂的，有时它简单得让人难以相信","不要害怕慢，只要别停下","健康是最大的财富，满足是最大的利润","读书是在别人的世界里，寻找自己的路","宇宙中最强大的力，是复利——无论是金钱还是习惯","你的态度，决定了你的高度","一棵树最好的种植时间是十年前，其次是现在","勇气不是没有恐惧，而是战胜恐惧","简单的生活，是最奢侈的奢华","怀疑是智慧的源泉","给予比接受更能带来快乐","你如何看待自己，远比别人如何看待你重要得多","真正的发现之旅不在于寻找新风景，而在于拥有新的眼睛","沉默有时是最有力的呐喊","幸福就像蝴蝶，你越是追逐，它越是飞远；当你静静坐下，它却会落在你肩头","行动是治愈恐惧的良药","真正的朋友是在你黑暗中为你点灯的人","梦想不会逃跑，会逃跑的永远是自己","昨天是历史，明天是谜团，今天是礼物。（所以英文里“现在”叫Present）","最简单的真理，往往需要最漫长的旅程来理解","时间是最好的老师，但不幸的是，它会杀死所有学生","成长就是与不完美的自己和解","最黑暗的夜晚，也会孕育最明亮的星辰","微笑是两人之间最短的距离","不要用别人的尺子，来丈量自己的人生","善良是一种选择，即使世界并不总是对你善良","我既想纠缠你，又想放弃你，既想和你做到不再联系但又害怕和你没有关系，既想退出你的生活，但又害怕真的失去你","最大的勇气，是在绝望中依然选择希望","间歇性凌云壮志，持续性混吃等死。——当代大部分人的状态写真","所谓成熟，就是终于习惯了“得不到”和“已失去”","生活就像扫码支付，太快了，以至于忘了钱是怎么花没的","我们都在朋友圈里，过着别人点过赞的人生","焦虑是大脑在滚动播放的“您可能在以下方面不如别人”","自由不是想做什么就做什么，而是想不做什么就能不做什么","最好的休息，是换一种方式累","现代人的孤独：通讯录里有5000个好友，想说话时却找不到一个","所谓“说话直”，多半是懒得为你的感受费心","承诺这东西，听的当时是真心，过后就是鬼故事","疏远的秘诀是：一句“在吗？”之后，再无下文","人脉不是能帮到你的人，而是你真的能帮到的人"," 吵架时最大的输家，是那个更在乎关系的人","合群，往往意味着你放弃了部分思考的主权","每一个不起舞的日子，都是对生命的辜负","半山腰总是最挤的，你得去山顶看看","成功的速度一定要超过父母老去的速度","把“不可能”从你的字典里删去","如果运气不行，那就试试勇气","我期待风起而你好像更希望风停，奈何思念无声，幸好思念无声","万念俱灰，花也尘埃，无趣最是无所谓，没了忧争少了虑猜","点赞是新的“我在乎你”，但也可能只是手滑","总觉得自己还年轻，直到看到比自己小的人都开始养生，才惊觉岁月不饶人","心如空海，弃了痴爱，再无替代，人不开怀，不如没想开","小时候觉得大人说话不算数，长大后才知道，我们也经常对自己食言","人是在某一天突然就失去了重要的人的时候才恍觉时间不够的","回忆是一条没有尽头的路","在不愿回首的年代里，有些人从未回头","我想两个人的相遇已是上上签了吧","你害怕的事情，往往没那么可怕","我们都在假装很坚强，其实都想被懂","人生无常，早点睡觉","谁不是一边自愈，一边崩溃","有时候，不是世界太复杂，而是我们想得太简单","以前的人写信要等一个月，现在的人发微信等一分钟就急","一路走，一路离开，生活不就是这个样子吗？","我已经不期待天降惊喜了，只希望别再天降铁锅","成年人的崩溃是静音的——毕竟手机开了静音，哭也要挑时间","对于意气风发的少年，我想我将无法释怀那段岁月","不想内耗，不想内耗，不想内耗，所以过不去的也让它过去吧","只要路是对的，就不怕路远","再难，也要咬牙撑过去","心怀希望的人，永远不会迷路","命运从不眷顾胆小鬼","我们总在纠结‘该选哪条路’，却忘了每条路都会让你遇见不同的风景","我笑得很大声，没人看见我眼底的疲惫","一天的开始，就是以为‘明天会更好’，而真正面临的是让‘今天别太糟’","即使我们不是情侣关系，我也害怕你喜欢上别人，没有身份的占有欲最可笑，没有资格吃的醋最酸，我有一万种想见你的理由，却唯独少了一个见你的身份","世界那么大，我怎么能轻易认输","遇事不决先emo，emo完了继续躺平","成长的过程，就是与自己和解的过程","君啊君，莫等华发踏月行","说没事的人，心里都有点事","不想卷，也不想躺，只是动不了","敢倒下，怕没人扶；不敢崩溃，怕没人懂","那些没说出口的话，最后都变成了沉默", "信息爆炸，烦恼也升级。以前怕没信号，现在怕没回应","世界荒谬，生活疲惫，需要偶尔发发疯","生活就像一盒巧克力，你永远不知道下一块是什么味道","既然选择了远方，就要学会顺便晒晒太阳","有些路很远，走下去会很累，但不走会后悔","世界太大，但总有一处是我的归宿","失望攒够了，自然会离开","生活有点难，但你也不差","爱情就像数学题，不会就是不会，装懂也没用","青春不是年少，而是再也不会回来的勇敢","有些人见一面少一面，所以每次都格外珍惜","真正难过的时刻，是你说“没事”的时候","人生就像骑自行车，想保持平衡就得往前走，但别忘了欣赏路边的风景","现代人的孤独，不是没人陪，而是陪的人都在玩手机","喜欢一个人，大概就是，看到一棵奇怪的树，都想拍下来分享给你","“你怎么了？”是我最羡慕听到的一句话","世界不会因为你焦虑，就提前给你答案","能让你痛苦的，往往不是别人，而是执念","我们总说‘等有时间再做’，却忘了时间不会等我们","每次说“我睡了”之后，才是我情绪最乱的时候","是赶路的人，也是努力生活的人","受过的歧视和委屈时刻都在提醒我要争气","没有耐心和耐力，就别怪现实太现实","加油(ง•̀_•́)ง🏂🏋️‍♀️🤸‍♂️🤺⛹️‍♂️🤾‍♂️🏌️‍♂️🏇" -->
@@ -923,7 +923,8 @@
 
 
          const musicFiles = [
-            '说谎.mp3', 
+            'counterattack.mp3',
+            '说谎.mp3',
             '云烟成雨.mp3',
             '知我.mp3',
             '茫.mp3',
@@ -1055,4 +1056,3 @@
 </body>
 
 </html>
-
