--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              绝望的消解过后
+              对绝望的消解过后
               <br>必是重生
               <br>网站最后更新时间
               <br>2026年2月7日
@@ -2972,3 +2972,4 @@
 </body>
 
 </html>
+
