--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in/link/music/counterattack.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in/link/music/归途有风.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -2972,3 +2972,4 @@
 </body>
 
 </html>
+
